Added text content and background image

--- a/assignment1/part1.html
+++ b/assignment1/part1.html
@@ -4,13 +4,52 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Part 1</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="part1.css">
 </head>
+<style>
+  body,div,p,h1{
+    margin: 0;
+    padding: 0;
+  }
+  body{
+    background: url(/assignment1/Rectangle\ 2.png);
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Work Sans";
+    color: white;
+  }
+  .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    text-align: center;
+  }
+  .para {
+
+  }
+  .shop{
+    font-weight: 600;
+    background-color: greenyellow;
+    padding: 10px 20px;
+  }
+  
+</style>
 <body>
-  <div>
-    <p>
-      Just checking...again and again
-    </p>
+  <div class="container">
+    <p>Savor the Flavors</p>
+    <h1>Experience Culinary Excellence Food Experience</h1>
+    <div class="para">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</div>
+    <div class="shop">Shop The Hotest Food</div>
   </div>
 </body>
 </html>
