added some more CSS

--- a/assignment1/part1.html
+++ b/assignment1/part1.html
@@ -35,18 +35,26 @@
     text-align: center;
   }
   .para {
-
+    font-size: 10px;
+    margin: 0px 22px 20px 22px;
+  }
+  h1 {
+    font-size: 39px;
+    margin-bottom: 25px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
   .shop{
     font-weight: 600;
-    background-color: greenyellow;
+    background-color: rgb(108, 179, 1);
     padding: 10px 20px;
+    font-size: 10px;
+    border-radius: 4px;
   }
   
 </style>
 <body>
   <div class="container">
-    <p>Savor the Flavors</p>
+    <p style="font-weight: 500; margin-bottom: 10px; ">Savor the Flavors</p>
     <h1>Experience Culinary Excellence Food Experience</h1>
     <div class="para">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock</div>
     <div class="shop">Shop The Hotest Food</div>
