--- a/index.html
+++ b/index.html
@@ -1,102 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Restaurant</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Restaurant</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;600&family=Work+Sans:wght@400;600;700&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header class="head-part open-sans-fonts">
+            <div class="hero-part">
+                <h3>Savor the Flavors</h3>
+                <h1>Experience Culinary Excellence Food Experience</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random
+                    text. It has roots in a piece of classical Latin literature
+                    from 45 BC.</p>
+                <button class="open-sans-fonts">Shop The Hottest Food</button>
+            </div>
+        </header>
 
-  <!-- Hero Section -->
-  <header>
-    <div class="bg"></div>
-    <div class="text-sec">
-      <h4>Savor the Flavors</h4>
-      <h1>Experience Culinary Excellence</h1>
-      <h1>Food Experience</h1>
-      <p>
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin 
-        literature from 45 BC, making it over 2000 years old. Richard McClintock.
-      </p>
-      <a href="page2.html"><button>Shop The Hottest Food</button></a>
-    </div>
-  </header>
+        <main>
+            <section class="card-section open-sans-fonts">
+                <h4>Favorite Brands</h4>
+                <h1>Your Favorite Brands Food Are Now On Sale</h1>
+                <div class="cards">
+                    <div class="card1">
+                        <img src="./assets/pizza.png" alt="Pizza">
+                        <button class="open-sans-fonts">Pizza Burg</button>
+                        <h2>Up TO 50% off</h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text.</p>
+                    </div>
+                    <div class="card1">
+                        <img src="./assets/biriyani.png" alt="Biriyani">
+                        <button class="open-sans-fonts">Kacchi Bhai</button>
+                        <h2>Up TO 50% off</h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text.</p>
+                    </div>
+                    <div class="card1">
+                        <img src="./assets/burger.png" alt="Burger">
+                        <button class="open-sans-fonts">Burger King</button>
+                        <h2>Up TO 50% off</h2>
+                        <p>Contrary to popular belief, Lorem Ipsum is not simply
+                            random text.</p>
+                    </div>
+                </div>
+                <button class="open-sans-fonts card-btn">Watch All
+                    Sells</button>
+            </section>
 
-  <!-- About Section -->
-  <footer>
-    <h1 class="about">About Us</h1>
-    <div class="flex">
-      <div class="img3">
-        <img src="assets/picture/image 1.png" alt="About Us" height="450" width="700" />
-      </div>
-      <div class="content">
-        <h1>We always make sure to provide you with good food</h1>
-        <p>Don’t miss a thing! Subscribe to our newsletter</p>
-        <hr />
-        <h3>Follow Us On</h3>
-        <hr />
-        <div class="icon">
-          <i class="fa-brands fa-facebook" style="color: #0874e7; font-size: 40px;"></i>
-          <i class="fa-brands fa-x-twitter" style="font-size: 40px;"></i>
-          <i class="fa-brands fa-instagram" style="color: #FA8F21; font-size: 40px;"></i>
-          <i class="fa-brands fa-pinterest" style="color: #da1010; font-size: 40px;"></i>
-        </div>
-      </div>
-    </div>
-  </footer>
 
-  <!-- Favorite Brands Section -->
-  <section>
-    <h5>Favorite Brands</h5>
-    <h1 class="head1">Your Favorite Brands Food Are Now On Sale</h1>
+        <section class="pizza-card-section">
+            <div class="pizza-card">
+                <div class="card_image_part"></div>
+                <div class="card_bottom_part">
+                    <div class="pizza_burg_box">Pizza Burg</div>
+                    <h1>Up to 50% Off</h1>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    <button class="shopbutton">Watch All Sells</button>
+                </div>
+            </div>
+        </section>
 
-    <div class="img">
-      <div class="fig1">
-        <img src="assets/picture/Rectangle 1.png" alt="Pizza Burg" class="i"/>
-        <div><button class="btn">Pizza Burg</button></div>
-        <h2>Up To 50% Off</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-      </div>
 
-      <div class="fig2">
-        <img src="assets/picture/Rectangle 3.png" alt="Kacchi Bhai" class="i"/>
-        <div><button class="btn">Kacchi Bhai</button></div>
-        <h2>Up To 50% Off</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-      </div>
+        <section class="about-us">
+            <div class="us-img">
+                <img src="./assets/foods.png" alt="Foods">
+            </div>
+            <div class="us-des open-sans-fonts">
+                <div>
+                    <h1>We always make sure to provide you with good food</h1>
+                    <p>Don’t miss a thing! Subscribe to our newsletter</p>
+                    <hr>
+                    <h3>Follow Us On</h3>
+                    <hr>
+                    <div class="social-icons">
+                        <div><img src="./assets/Group 1.svg" alt="Facebook"></div>
+                        <div><img src="./assets/x-2 1.svg" alt="X"></div>
+                        <div><img src="./assets/instagram-2016-5 1.svg" alt="Instagram"></div>
+                        <div><img src="./assets/pinterest-3 1.svg" alt="Pinterest"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </main>
 
-      <div class="fig3">
-        <img src="assets/picture/Rectangle 4.png" alt="Burger King" class="i"/>
-        <div><button class="btn">Burger King</button></div>
-        <h2>Up To 50% Off</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
-      </div>
-    </div>
+        <footer>
+            
+        <section class="contact-section">
+            <div class="content_container">
+                <div class="main-heading">We always make sure to provide you <br> with good food</div>
+                <div class="sub-heading">Don't miss a thing! Subscribe to our newsletter</div>
+                <div class="follow-text">Follow Us On</div>
+                <div class="social-media-links">
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
+                    </a>
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg" alt="X (Twitter)">
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+                    </a>
+                    <a href="https://pinterest.com" target="_blank">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png" alt="Pinterest">
+                    </a>
+                </div>
+            </div>
+        </section>
+        </footer>
 
-    <a href="home.html"><button class="btn2">Watch All Sells</button></a>
-  </section>
-
-  <!-- Footer Background -->
-  <footer class="footer2">
-    <h1 class="about">About Us</h1>
-    <div class="content">
-      <h1>We always make sure to provide you with good food</h1>
-      <p>Don’t miss a thing! Subscribe to our newsletter</p>
-      <hr />
-      <h3>Follow Us On</h3>
-      <hr />
-      <div class="icon2">
-        <i class="fa-brands fa-facebook" style="color: #0874e7; font-size: 40px;"></i>
-        <i class="fa-brands fa-x-twitter" style="font-size: 40px;"></i>
-        <i class="fa-brands fa-instagram" style="color: #FA8F21; font-size: 40px;"></i>
-        <i class="fa-brands fa-pinterest" style="color: #da1010; font-size: 40px;"></i>
-      </div>
-    </div>
-  </footer>
-
-</body>
-</html>
+    </body>
